# feedback-widget

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  QUICKSTART.md  README.md  docker-compose.feedback.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: backend.yml  frontend.yml  release.yml  sapphira-smoke.yml
apps/sandbox-host/: docker-compose.yml
apps/sandbox-host/backend/: Dockerfile  pyproject.toml
apps/sandbox-host/backend/app/: __init__.py  auth.py  main.py
apps/sandbox-host/frontend/: Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
apps/sandbox-host/frontend/src/: App.tsx  bindings.ts  main.tsx  styles.css
docs/: INSTALL-CRM.md  INSTALL-SAPPHIRA.md  INSTALL.md  INTEGRATION-GUIDE.md  PLAN-sapphira-v0.2.0-upgrade.md  PLAN-v0.3.0-richer-metadata.md  PLAN-v0.3.0-ticket-comments.md  UPGRADE-STRATEGY.md
docs/adr/: 000-index.md  001-workspace-structure.md  002-vendor-shadcn-inside-widget.md  006-sync-initially-async-follow-up.md
scripts/: bump-version.sh
