[project]
name = "rl3-feedback-widget-workspace"
version = "0.1.0"
description = "RL3 Feedback Widget monorepo (Python uv workspace root). Real package lives in packages/feedback-backend."
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "packages/feedback-backend",
    "apps/sandbox-host/backend",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF", "ARG001"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
