[project]
name = "feedback-sandbox-host"
version = "0.0.0"
description = "Minimal FastAPI host for the feedback widget — demo + extraction validator."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "rl3-feedback-widget",
    "psycopg[binary]>=3.2",
]

[tool.uv.sources]
rl3-feedback-widget = { path = "../../../packages/feedback-backend", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
